Dashboard - 매출 통계, 소비 분석 화면 추가
- Nav 로고 font-family 변경

--- a/src/assets/scss/_import/variables.scss
+++ b/src/assets/scss/_import/variables.scss
@@ -9,8 +9,16 @@ $red: #ea5455;
 $gray: #b4b7bd;
 $dark-gray: #82868b;
 $navy: #343d55;
+$green: #28c76f;
+$orange: #ff9f43;
+$mint: #00cfe8;
 
-$bg-purple: #283046;
+$bg-navy: #283046;
+$bg-purple: rgba(115,103,240,.12);
+$bg-green: rgba(40,199,111,.12);
+$bg-red: rgba(234,84,85,.12);
+$bg-orange: rgba(255,159,67,.12);
+$bg-mint: rgba(0,207,232,.12);
 
 $table-border: 1px solid #dfe5ed;
 
