--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -4,7 +4,7 @@
 .card {
   margin-bottom: 2rem;
   padding: 1.5rem;
-  background-color: $bg-purple;
+  background-color: $bg-navy;
   border-radius: .428rem;
   box-shadow: 0 4px 24px 0 rgba(34,41,47,.24);
   overflow: hidden;
@@ -45,7 +45,7 @@ hr {
     .row {
       padding: 3rem 3rem 3.5rem;
       width: 100%;
-      background-color: $bg-purple;
+      background-color: $bg-navy;
       border-radius: .35rem;
     
       .welcome {
