--- a/src/assets/scss/components/form.scss
+++ b/src/assets/scss/components/form.scss
@@ -23,7 +23,7 @@
     padding: .638rem 1rem .438rem;
     height: auto;
     color: $gray;
-    background-color: $bg-purple;
+    background-color: $bg-navy;
     border-color: $border-color;
     transition: border-color .15s ease-in-out;
 
