--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -7,3 +7,4 @@
 @import '@/assets/scss/components/btn.scss';
 @import '@/assets/scss/components/form.scss';
 @import '@/assets/scss/components/table.scss';
+@import '@/assets/scss/components/dashboard.scss';
